Also clear scope on the outer window in SetDocShell(null), rather than clearing scope on the inner window twice.  b=352911  r=mhammond  sr=jst